--- a/app/source/css/index.css
+++ b/app/source/css/index.css
@@ -2,5 +2,8 @@
 * @import "../font/icon/iconfont.css";
 * */
 
-/*@import "../font/icon/iconfont.css";*/
-@import "./parts/normalize.css";
+/*@import './bootstrap-sidebar.css';*/
+
+.ms-controller {
+    visibility: hidden
+}
